# creativity

./: .gitignore  CMakeLists.txt  Readme.md
src/: GpuImage.cu  GpuImage.h  average.cu  average.h  cudaUtils.cu  dominantColour.cu  dominantColour.h  dominantTransition.cu  dominantTransition.h  eigenArt.cu  eigenArt.h  main.cpp  utils.cpp  utils.h
src/cu/: image.cu  image.h  kmeans.cu  kmeans.h  shared_pointer.cu  shared_pointer.h  utils.cu  utils.h  vector.cu  vector.h
src/cuUtils/: cuImage.cu  cuImage.h  cuVector.cu  cuVector.h  cudaUtils.cu  cudaUtils.h
src/utils/: binReader.cpp  binReader.h  binWriter.cpp  binWriter.h  utils.cpp  utils.h
